just updated some notes

--- a/Roadmap/roadmap.html
+++ b/Roadmap/roadmap.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,4 +34,4 @@
     <img src="../images/RM_SQL.png" width="300px">
 </div>
 </body>
-</html>
+</html> -->
