--- a/Resources/python.html
+++ b/Resources/python.html
@@ -34,7 +34,7 @@
     
     <div class="container">
 
-        <h1><a href="../readme.md" target="_blank" rel="noopener noreferrer">🏠 Home</a></h1>
+        <h1><a href="../" target="_blank" rel="noopener noreferrer">🏠 Home</a></h1>
         <br>
         <h3>This page contains resources to Learn Python 🐍 </h3>
 <br>
